# cavs-hub-cli

./: Cargo.toml  LICENSE  README.md  build-install.sh  build.rs  install.sh  uninstall.sh
.github/: CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  about.toml  dependabot.yml  licenses.tmpl
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: README.md  install_linux.md  install_macos.md  install_source.md  install_windows.md
landing/: index.html
src/: api.rs  config.rs  error.rs  git.rs  hooks.rs  lfs.rs  main.rs  output.rs  update.rs  util.rs
src/commands/: config.rs  doctor.rs  gitwrap.rs  hub.rs  index.rs  install_lfs.rs  login.rs  logout.rs  mod.rs  repo.rs  status.rs  transfer.rs  whoami.rs
tests/: cli.rs
